--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <a href="mailto:cheruku3@buffalo.edu">cheruku3@buffalo.edu</a>
                 </div>
                 <p class="lead mb-5">I am an experienced Software Engineer with knowledge of both front-end as well as back-end development. I am currently pursuing my Masters degree at University at Buffalo. I have worked on building Web applications using Java, JavaScript, SQL and possess good knowledge of Capital Markets along with various asset classes.</p>
-                <a class="btn btn-dark btn-res" href="https://drive.google.com/file/d/1i8Zkt6MAvBKAM2J_cYjMhn_nzfPcDHbW/view?usp=sharing" target="_blank">Check out my resume</a>
+                <a class="btn btn-dark btn-res" href="assets/resume/resume.pdf" target="_blank">Check out my resume</a>
                 <br /><br /><br />
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/saitejacherukuri/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
