--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Sai Teja Cherukuri" />
     <meta property="og:title" content="Portfolio" />
     <!-- <meta property="og:image" content="assets/img/portfolio/previe  w.jpg" /> -->
+    <meta name="keywords" content="Sai Teja Cherukuri, sai teja cherukuri, Sai Cherukuri, Sai Teja, University at Buffalo" lang="en-US">
     <meta property="og:description" content="My Portfolio Page" />
     <meta property="og:url" content="//www.saitejacherukuri.com" />
     <title>Sai Teja Cherukuri</title>
